<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/library_tab"
        android:enabled="true"
        android:icon="@drawable/book_light"
        android:title="@string/library_tab_nav_label" />
    <item
        android:id="@+id/sharing_tab"
        android:enabled="false"
        android:icon="@drawable/sharing_light"
        android:title="@string/sharing_tab_nav_label" />
    <item
        android:id="@+id/notes_tab"
        android:enabled="false"
        android:icon="@drawable/note_light"
        android:title="@string/notes_tab_nav_label" />
    <item
        android:id="@+id/bookmarks_tab"
        android:enabled="true"
        android:icon="@drawable/bookmark_collection_light"
        android:title="@string/bookmarks_tab_nav_label" />
</menu>