<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/listRowHeight"
    android:background="?android:attr/selectableItemBackground"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:paddingHorizontal="@dimen/globalSpacing"
    android:paddingVertical="@dimen/componentSpacing">

    <ImageView
        android:id="@+id/cover"
        android:layout_width="@dimen/smallCoverWidth"
        android:layout_height="@dimen/listRowHeight"
        android:contentDescription="@string/book_cover_desc"
        app:srcCompat="@mipmap/book_cover_default" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/componentSpacing"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/book_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxWidth="@dimen/listRowTextMaxWidth"
            android:maxLines="2"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/page"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxWidth="@dimen/listRowTextMaxWidth"
            android:maxLines="2"
            android:text="@string/bookmark_page" />

    </LinearLayout>

    <Space
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1" />

    <ImageView
        android:id="@+id/bookmark_status"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:contentDescription="@string/bookmark_status_img_desc" />
</LinearLayout>