<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:foregroundTint="#00FFFFFF"
    android:orientation="vertical"
    tools:context=".activities.home.library.LibraryFragment">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/book_list_scroll_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.appcompat.widget.SearchView
                android:id="@+id/search_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/globalSpacing"
                android:layout_marginTop="@dimen/componentSpacing"
                android:background="@drawable/custom_searchview"
                app:iconifiedByDefault="false"
                app:queryBackground="@null"
                app:queryHint="Search Here"
                app:submitBackground="@null" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/globalSpacing"
                android:layout_marginTop="@dimen/componentSpacing"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/book_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/num_books"
                    android:textSize="@dimen/bodyText" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/sort_books_img"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:backgroundTint="#00FFFFFF"
                        app:srcCompat="@drawable/sort_light"
                        tools:ignore="ContentDescription" />

                    <Spinner
                        android:id="@+id/sort_option_spinner"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/transparent"
                        android:contentDescription="@string/sort_books_btn_desc" />
                </FrameLayout>
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/book_list"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="@dimen/listRowHeight"
                android:layout_weight="1"
                android:paddingTop="@dimen/componentSpacing" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/empty_book_list_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/empty_book_list_desc"
            android:textSize="@dimen/bodyText" />
    </LinearLayout>
</LinearLayout>